@@ -1,0 +1,25 @@
+   realprecision = 115 significant digits (100 digits displayed)
+-oo
+-oo
+-oo
+-oo
+-oo
+[1, 1/12, 1/288, -139/51840, -571/2488320, 163879/209018880, 5246819/7524679
+6800, -534703531/902961561600, -4483131259/86684309913600, 432261921612371/5
+14904800886784000, 6232523202521089/86504006548979712000, -25834629665134204
+969/13494625021640835072000, -1579029138854919086429/97161300155814012518400
+00, 746590869962651602203151/116593560186976815022080000, 151151360102809790
+3631961/2798245444487443560529920000, -8849272268392873147705987190261/29969
+2087104605205332754432000000]
+[1, 1/12, 1/288, -139/51840, -571/2488320, 163879/209018880, 5246819/7524679
+6800, -534703531/902961561600, -4483131259/86684309913600, 432261921612371/5
+14904800886784000, 6232523202521089/86504006548979712000, -25834629665134204
+969/13494625021640835072000, -1579029138854919086429/97161300155814012518400
+00, 746590869962651602203151/116593560186976815022080000, 151151360102809790
+3631961/2798245444487443560529920000, -8849272268392873147705987190261/29969
+2087104605205332754432000000, -142801712490607530608130701097701/57540880724
+084199423888850944000000, 2355444393109967510921431436000087153/131193208050
+91197468646658015232000000, 2346608607351903737647919577082115121863/1558575
+31164483425927522297220956160000000]
+[0]
+Total time spent: 136
